[tool.poetry]
name = "monarchmusicbotpy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
youtube-dl = "^2021.1.24"
discord = "^1.0.1"
"discord.py" = "^1.6.0"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
